lib/src/compiler/tests/testdata/errors/87.out
error[E001]: syntax error
 --> line:3:18
  |
3 |   any of (a,b,c) in (0..100)
  |                  ^ unexpected `in`
  |